# template-ipynb

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.jsonc  LICENSE-MIT  README.md  pyproject.toml  ruff.toml  taplo.toml
src/notebook1/: __init__.py  main.py  module.py  notebook1.ipynb
src/template_ipynb/: __init__.py  main.py
src/tests/: __init__.py
